--- a/index.html
+++ b/index.html
@@ -34,38 +34,12 @@
 
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
-
-
   <div class="site-wrap">
-
-    <div class="site-mobile-menu site-navbar-target">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close mt-3">
-          <span class="icon-close2 js-menu-toggle"></span>
-        </div>
-      </div>
-      <div class="site-mobile-menu-body"></div>
-    </div>
-
-    <header class="header-bar d-flex d-lg-block align-items-center site-navbar-target" data-aos="fade-right">
-      <div class="">
-        <a href="index.html"><i class="fa-regular fa-house-chimney-heart" style="font-size: 100px"></i></a>
-      </div>
-      <div class="d-inline-block d-lg-none ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle "><span class="icon-menu h3"></span></a></div>
-
-      <div class="main-menu">
-        <ul class="js-clone-nav">
-          <li><a href="#section-home" class="nav-link">Home</a></li>
-          <li><a href="#section-photos" class="nav-link">Precious</a></li>
-        </ul>
-      </div>
-    </header> 
     <main class="main-content">
-
       <section class="site-section-hero bg-image mb-5" style="background-color: indianred"  data-stellar-background-ratio="0.5" id="section-home">
         <div class="row justify-content-center align-items-center">
-          <div class="col-md-7 text-center">
-            <h3 class="font-italic text-uppercase text-custom"  data-aos="fade-up">Dear Lanh - My Sweetie <i class="fa-light fa-house-chimney-heart"></i></h3>
+          <div class="col-md-12 text-center">
+            <h3 class="font-italic text-custom"  data-aos="fade-up">Dear Lanh - My Sweetie <i class="fa-light fa-house-chimney-heart"></i></h3>
             <p class="lead text-white mb-4 font-italic" style="margin-top: 80px;font-size: 12px  ;font-family: sans-serif;" data-aos="fade-up" data-aos-delay="100">
 
               We’ve been through a lot, we’ve come a long way<br />
@@ -98,7 +72,7 @@
         </div>
       </section>
 
-      <div class="container-fluid site-section">
+      <div class="container-fluid site-section px-5">
 
 
         <div class="row mb-3">
